add updates to css and readme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-        <title></title>
+        <title>trade children's tears for candy</title>
 
         <meta content="" name="description">
         <meta content="width=device-width" name="viewport">
@@ -18,7 +18,7 @@
 
             <header>
 
-                <h1 class="site__title">This is the H1</h1>
+                <h1 class="site__title">Is It Leap Year?</h1>
 
             </header>
 
@@ -39,7 +39,7 @@
                         <button class="form__btn" type="submit">Find out!</button>
                     </form>
 
-                    <div id="result">
+                    <div id="result" class="main__result" >
                         <p> <span class="year"></span> is <span class="not"></span> a leap year.</p>
                     </div>
 
